--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,7 +50,7 @@ endif()
 add_subdirectory(base)
 add_subdirectory(controllers)
 add_subdirectory(estimators)
-add_subdirectory(exe)
+# add_subdirectory(exe)
 add_subdirectory(feature)
 add_subdirectory(mvs)
 add_subdirectory(optim)
