--- a/cmake/CMakeConfig.cmake.in
+++ b/cmake/CMakeConfig.cmake.in
@@ -54,8 +54,8 @@ set(EIGEN3_INCLUDE_DIR_HINTS @EIGEN3_INCLUDE_DIR_HINTS@)
 set(FREEIMAGE_INCLUDE_DIR_HINTS @FREEIMAGE_INCLUDE_DIR_HINTS@)
 set(FREEIMAGE_LIBRARY_DIR_HINTS @FREEIMAGE_LIBRARY_DIR_HINTS@)
 
-set(GLEW_INCLUDE_DIR_HINTS @GLEW_INCLUDE_DIR_HINTS@)
-set(GLEW_LIBRARY_DIR_HINTS @GLEW_LIBRARY_DIR_HINTS@)
+# set(GLEW_INCLUDE_DIR_HINTS @GLEW_INCLUDE_DIR_HINTS@)
+# set(GLEW_LIBRARY_DIR_HINTS @GLEW_LIBRARY_DIR_HINTS@)
 
 set(GLOG_INCLUDE_DIR_HINTS @GLOG_INCLUDE_DIR_HINTS@)
 set(GLOG_LIBRARY_DIR_HINTS @GLOG_LIBRARY_DIR_HINTS@)
@@ -81,8 +81,8 @@ if(COLMAP_FIND_QUIETLY)
 
     find_package(Glog QUIET)
 
-    find_package(OpenGL QUIET)
-    find_package(Glew QUIET)
+    # find_package(OpenGL QUIET)
+    # find_package(Glew QUIET)
 else()
     find_package(Ceres REQUIRED)
 
@@ -99,8 +99,8 @@ else()
 
     find_package(Glog REQUIRED)
 
-    find_package(OpenGL REQUIRED)
-    find_package(Glew REQUIRED)
+    # find_package(OpenGL REQUIRED)
+    # find_package(Glew REQUIRED)
 endif()
 
 # Set the exported variables.
@@ -111,8 +111,8 @@ set(COLMAP_VERSION @COLMAP_VERSION@)
 
 set(COLMAP_OPENMP_ENABLED @OPENMP_ENABLED@)
 
-set(COLMAP_CUDA_ENABLED @CUDA_ENABLED@)
-set(COLMAP_CUDA_MIN_VERSION @CUDA_MIN_VERSION@)
+# set(COLMAP_CUDA_ENABLED @CUDA_ENABLED@)
+# set(COLMAP_CUDA_MIN_VERSION @CUDA_MIN_VERSION@)
 
 set(COLMAP_GUI_ENABLED @GUI_ENABLED@)
 
@@ -127,7 +127,7 @@ set(COLMAP_INCLUDE_DIRS
     ${GLOG_INCLUDE_DIRS}
     ${FREEIMAGE_INCLUDE_DIRS}
     ${CERES_INCLUDE_DIRS}
-    ${GLEW_INCLUDE_DIRS}
+    # ${GLEW_INCLUDE_DIRS}
 )
 
 set(COLMAP_LINK_DIRS
@@ -142,7 +142,7 @@ set(COLMAP_INTERNAL_LIBRARIES
     pba
     poisson_recon
     sqlite3
-    sift_gpu
+    # sift_gpu
     vlfeat
 )
 
@@ -151,42 +151,42 @@ set(COLMAP_EXTERNAL_LIBRARIES
     ${GLOG_LIBRARIES}
     ${FREEIMAGE_LIBRARIES}
     ${CERES_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-    ${GLEW_LIBRARIES}
+    # ${OPENGL_LIBRARIES}
+    # ${GLEW_LIBRARIES}
 )
 
 if(UNIX)
     list(APPEND COLMAP_EXTERNAL_LIBRARIES
         ${Boost_FILESYSTEM_LIBRARY}
         ${Boost_PROGRAM_OPTIONS_LIBRARY}
-        ${Boost_SYSTEM_LIBRARY}
-        pthread)
+        ${Boost_SYSTEM_LIBRARY})
+        # pthread)
 endif()
 
-if(COLMAP_OPENMP_ENABLED)
-    find_package(OpenMP QUIET)
-    add_definitions("-DOPENMP_ENABLED")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-endif()
+# if(COLMAP_OPENMP_ENABLED)
+#     find_package(OpenMP QUIET)
+#     add_definitions("-DOPENMP_ENABLED")
+#     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+# endif()
 
-if(COLMAP_CUDA_ENABLED)
-    find_package(CUDA ${COLMAP_CUDA_MIN_VERSION} QUIET)
-    list(APPEND COLMAP_EXTERNAL_LIBRARIES ${CUDA_LIBRARIES})
-    list(APPEND COLMAP_INTERNAL_LIBRARIES colmap_cuda)
-endif()
+# if(COLMAP_CUDA_ENABLED)
+#     find_package(CUDA ${COLMAP_CUDA_MIN_VERSION} QUIET)
+#     list(APPEND COLMAP_EXTERNAL_LIBRARIES ${CUDA_LIBRARIES})
+#     list(APPEND COLMAP_INTERNAL_LIBRARIES colmap_cuda)
+# endif()
 
-if(COLMAP_GUI_ENABLED)
-    find_package(Qt5 5.4 REQUIRED COMPONENTS Core OpenGL Widgets)
-    list(APPEND COLMAP_EXTERNAL_LIBRARIES
-        ${Qt5Core_LIBRARIES}
-        ${Qt5OpenGL_LIBRARIES}
-        ${Qt5Widgets_LIBRARIES})
-    list(APPEND COLMAP_INCLUDE_DIRS
-        ${Qt5Core_INCLUDE_DIRS}
-        ${Qt5OpenGL_INCLUDE_DIRS}
-        ${Qt5Widgets_INCLUDE_DIRS})
-endif()
+# if(COLMAP_GUI_ENABLED)
+#     find_package(Qt5 5.4 REQUIRED COMPONENTS Core OpenGL Widgets)
+#     list(APPEND COLMAP_EXTERNAL_LIBRARIES
+#         ${Qt5Core_LIBRARIES}
+#         ${Qt5OpenGL_LIBRARIES}
+#         ${Qt5Widgets_LIBRARIES})
+#     list(APPEND COLMAP_INCLUDE_DIRS
+#         ${Qt5Core_INCLUDE_DIRS}
+#         ${Qt5OpenGL_INCLUDE_DIRS}
+#         ${Qt5Widgets_INCLUDE_DIRS})
+# endif()
 
 if(COLMAP_CGAL_ENABLED)
     find_package(CGAL REQUIRED)
